--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/chrome": "0.0.117",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.5",
+    "@types/rewire": "^2.5.28",
     "@types/ws": "^7.2.6",
     "mocha": "^7.2.0",
     "prettier": "^2.0.5",
+    "rewire": "^5.0.0",
     "rollup": "^2.21.0",
     "ts-node": "^8.10.1",
     "tslib": "^2.0.0",
